// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`my chat bubbles render correctly 1`] = `
<View
  style={
    Object {
      "maxWidth": 300,
    }
  }
>
  <Image
    capInsets={
      Object {
        "bottom": 16,
        "left": 18,
        "right": 18,
        "top": 24,
      }
    }
    resizeMode="stretch"
    source={
      Object {
        "uri": "chatBubble",
      }
    }
    style={
      Array [
        Object {
          "bottom": 0,
          "height": null,
          "left": 0,
          "margin": 0,
          "padding": 0,
          "position": "absolute",
          "right": 0,
          "top": -4,
          "width": null,
        },
        Object {
          "tintColor": "#008EE2",
          "transform": Array [],
        },
      ]
    }
  />
  <Text
    style={
      Array [
        Object {
          "color": "#2D3B45",
          "fontSize": 16,
        },
        Array [
          Object {
            "backgroundColor": "transparent",
            "paddingBottom": 8,
            "paddingHorizontal": 12,
            "paddingTop": 12,
          },
          Object {
            "color": "#FFFFFF",
          },
        ],
      ]
    }
  >
    Hello, World!
  </Text>
</View>
`;

exports[`their chat bubbles render correctly 1`] = `
<View
  style={
    Object {
      "maxWidth": 300,
    }
  }
>
  <Image
    capInsets={
      Object {
        "bottom": 16,
        "left": 18,
        "right": 18,
        "top": 24,
      }
    }
    resizeMode="stretch"
    source={
      Object {
        "uri": "chatBubble",
      }
    }
    style={
      Array [
        Object {
          "bottom": 0,
          "height": null,
          "left": 0,
          "margin": 0,
          "padding": 0,
          "position": "absolute",
          "right": 0,
          "top": -4,
          "width": null,
        },
        Object {
          "tintColor": "#F5F5F5",
          "transform": Array [
            Object {
              "scaleX": -1,
            },
          ],
        },
      ]
    }
  />
  <Text
    style={
      Array [
        Object {
          "color": "#2D3B45",
          "fontSize": 16,
        },
        Array [
          Object {
            "backgroundColor": "transparent",
            "paddingBottom": 8,
            "paddingHorizontal": 12,
            "paddingTop": 12,
          },
          Object {
            "color": "#2D3B45",
          },
        ],
      ]
    }
  >
    Hello, back!
  </Text>
</View>
`;
